# src/api/routers/basic.go
@@ -57,6 +57,15 @@ func Color(r *gin.RouterGroup, cfg *config.Config) {
 	r.GET("/:id", h.GetById)
 	r.POST(GetByFilterExp, h.GetByFilter)
 }
+func Material(r *gin.RouterGroup, cfg *config.Config) {
+	h := handler.NewMaterialHandler(cfg)
+
+	r.POST("/", h.Create)
+	r.PUT("/:id", h.Update)
+	r.DELETE("/:id", h.Delete)
+	r.GET("/:id", h.GetById)
+	r.POST(GetByFilterExp, h.GetByFilter)
+}
 
 func Year(r *gin.RouterGroup, cfg *config.Config) {
 	h := handler.NewPersianYearHandler(cfg)
