# src/domain/model/base.go
@@ -39,3 +39,9 @@ type File struct {
 	Description string `gorm:"size:500;type:string;not null"`
 	MimeType    string `gorm:"size:20;type:string;not null"`
 }
+
+type Material struct {
+	BaseModel
+	Name         string `gorm:"size:100;type:string;not null,unique"`
+	HexColorCode string `gorm:"size:7;type:string;not null,unique"`
+}
